add filter match highlighting feature

--- a/apps/mantine-react-table-docs/pages/about.mdx
+++ b/apps/mantine-react-table-docs/pages/about.mdx
@@ -61,6 +61,8 @@ Mantine React Table is licensed under the [MIT License](https://github.com/Kevin
 
 ✅ Filtering (supports client-side and server-side)
 
+✅ Filter Match Highlighting
+
 ✅ Full Screen Mode
 
 ✅ Global Filtering (Search across all columns, rank by best match)
@@ -92,6 +94,10 @@ Mantine React Table is licensed under the [MIT License](https://github.com/Kevin
 ✅ Tree Data / Expanding Sub-rows
 
 ✅ Virtualization (react-virtual)
+
+### Join the Development Discussion
+
+Want to join the development discussion? Join the [Discord server](https://discord.gg/5wqyRx6fnm) to ask questions, or talk about the general direction of the project.
 
 ### Contributors
 
