switch default layout mode back to semantic

--- a/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
@@ -17,7 +17,7 @@ import { FAQs } from '../../../components/mdx/FAQs';
 > 1.  `@mantine/core` (v5)
 > 2.  `@mantine/hooks` (v5)
 > 3.  `@mantine/dates` (v5)
-> 4.  `@tabler/icons` (> v1.118)
+> 4.  `@tabler/icons-react` (v2)
 > 5.  `@emotion/react` (v11)
 > 6.  `dayjs` (v1.11)
 > 7.  `react` and `react-dom` (v17 or v18)
