corrected some words

--- a/apps/mantine-react-table-docs/pages/about.mdx
+++ b/apps/mantine-react-table-docs/pages/about.mdx
@@ -51,7 +51,7 @@ Mantine React Table is licensed under the [MIT License](https://github.com/Kevin
 
 ✅ Customize Icons
 
-✅ Customize Styling of internal Mui Components
+✅ Customize Styling of internal Mantine Components
 
 ✅ Data Editing (4 different editing modes)
 
