--- a/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
@@ -160,7 +160,7 @@ const columns = [
       row.getValue(id).startsWith(filterValue),
   },
 ];
-````
+```
 
 If you provide a custom filter function, it must have the following signature:
 
@@ -306,7 +306,7 @@ Here is the full Remote Data example featuring server-side **filtering**, pagina
 
 ### Customize Mantine Filter Input Components
 
-You can customize the MUI filter components by setting the `mantineFilterTextInputProps` prop or column option.
+You can customize the Mantine filter components by setting the `mantineFilterTextInputProps` prop or column option.
 
 You can also turn a filter textfield into a select dropdown by setting the `filterSelectOptions` prop or column option.
 
