--- a/apps/mantine-react-table-docs/pages/docs/guides/editing.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/editing.mdx
@@ -129,7 +129,7 @@ const columns = [
     accessor: 'age',
     header: 'Age',
     mantineEditTextInputProps: {
-      error: !!validationErrors.age, //highlight mui text field red error color
+      error: !!validationErrors.age, //highlight Mantine text field red error color
       helperText: validationErrors.age, //show error message in helper text.
       required: true,
       type: 'number',
