--- a/apps/mantine-react-table-docs/pages/docs/guides/global-filtering.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/global-filtering.mdx
@@ -107,7 +107,7 @@ const columns = [
 Filter Match Highlighting can be disabled by setting the `enableFilterMatchHighlighting` prop to `false`.
 
 ```jsx
-<MaterialReactTable
+<MantineReactTable
   columns={columns}
   data={data}
   enableFilterMatchHighlighting={false}
