--- a/apps/mantine-react-table-docs/pages/docs/guides/row-selection.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-selection.mdx
@@ -183,7 +183,7 @@ By default, the `enableMultiRowSelection` prop is set to `true`, which means tha
 
 ### Customize Select Checkboxes or Radio Buttons
 
-The selection checkboxes can be customized with the `mantineSelectCheckboxProps` prop. Any prop that can be passed to a Mui Checkbox component can be specified here. For example, you may want to use a different color for the checkbox, or use some logic to disable certain rows from being selected.
+The selection checkboxes can be customized with the `mantineSelectCheckboxProps` prop. Any prop that can be passed to a Mantine Checkbox component can be specified here. For example, you may want to use a different color for the checkbox, or use some logic to disable certain rows from being selected.
 
 ```tsx
 <MantineReactTable
