--- a/apps/mantine-react-table-docs/pages/docs/guides/customize-toolbars.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/customize-toolbars.mdx
@@ -75,7 +75,8 @@ Everything in the toolbars is customizable. You can add your own buttons or chan
 The `renderToolbarInternalActions` prop allows you to redefine the built-in buttons that usually reside in the top right of the top toolbar. You can reorder the icon buttons or even insert your own custom buttons. All of the built-in buttons are available to be imported from 'mantine-react-table'.
 
 ```tsx
-import { MantineReactTable,
+import {
+  MantineReactTable,
   MRT_ShowHideColumnsButton,
   MRT_ToggleFullScreenButton,
 } from 'mantine-react-table';
@@ -150,7 +151,7 @@ The `positionToolbarAlertBanner`, `positionGlobalFilter`, `positionPagination`, 
 
 ### Customize Toolbar Props and Styles
 
-The `mantineTopToolbarProps`, `mantineBottomToolbarProps`, `mantineToolbarAlertBannerProps`, and `mantineToolbarAlertBannerChipProps` props allow you to customize the props and styles of the underlying MUI components that make up the toolbar components. Remember that you can pass CSS overrides to their `sx` or `style` props. Some have found this useful for forcing `position: absolute` on alerts, etc.
+The `mantineTopToolbarProps`, `mantineBottomToolbarProps`, `mantineToolbarAlertBannerProps`, and `mantineToolbarAlertBannerChipProps` props allow you to customize the props and styles of the underlying Mantine components that make up the toolbar components. Remember that you can pass CSS overrides to their `sx` or `style` props. Some have found this useful for forcing `position: absolute` on alerts, etc.
 
 ### Customize Linear Progress Bars
 
@@ -219,7 +220,8 @@ The drawback to this approach is that you will not get all the automatic feature
 If you are using a custom toolbar, you can still import some of the built-in MRT components to use in your custom toolbar. For example, you can import all of the built-in internal toolbar icon buttons components and use them in your custom toolbar.
 
 ```jsx
-import { MantineReactTable,
+import {
+  MantineReactTable,
   MRT_ShowHideColumnsButton, // import the built-in show/hide columns button
   MRT_ToggleFullScreenButton, // import the built-in full screen toggle button
 } from 'mantine-react-table';
