--- a/apps/mantine-react-table-docs/pages/docs/guides/global-filtering.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/global-filtering.mdx
@@ -150,6 +150,8 @@ The default global filter function is set to `fuzzy`, which is a filtering algor
 
 If you keep the default `fuzzy` filterFn option as the global filter function, you get an extra ranked results feature enabled by default. This means that when a user searches with the searchbox, the results will be sorted by the closest match first instead of the order the data was defined in.
 
+The ranked results feature will disable itself automatically if a sort direction is applied to a column, if any sub-rows are expanded, or if any of the `manual` props are set to `true`.
+
 If you do not want ranked results to be enabled, but you still want fuzzy matching, you can set the `enableGlobalFilterRankedResults` prop to `false`.
 
 ```jsx
