--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,6 +12,10 @@ import Head from 'next/head';
 
 ### V1
 
+### Pre 1.0 Breaking changes
+
+- Moved from @tabler/icons v1 to @table-icons/react v2
+
 ## Roadmap
 
 TBD
