export more toolbar components

--- a/apps/mantine-react-table-docs/pages/docs/guides/async-loading.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/async-loading.mdx
@@ -2,7 +2,7 @@ import Head from 'next/head';
 import RootPropTable from '../../../components/prop-tables/RootPropTable';
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import LoadingExample from '../../../examples/loading';
-import LinearProgressExample from '../../../examples/linear-progress';
+import ProgressExample from '../../../examples/progress';
 import ReactQueryExample from '../../../examples/react-query';
 
 <Head>
@@ -63,7 +63,7 @@ If you do not want both progress bars and cell skeletons to show, you can use th
 
 You can customize the linear progress bars by passing props to the `mantineProgressProps` prop.
 
-<LinearProgressExample />
+<ProgressExample />
 
 ### Full Loading and Server-Side Logic Example
 
