--- a/apps/mantine-react-table-docs/pages/docs/guides/row-selection.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-selection.mdx
@@ -191,7 +191,7 @@ The selection checkboxes can be customized with the `mantineSelectCheckboxProps`
   data={data}
   enableRowSelection
   mantineSelectCheckboxProps={{
-    color: 'secondary',
+    color: 'orange',
   }}
 />
 ```
