--- a/apps/mantine-react-table-docs/pages/docs/guides/toolbar-customization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/toolbar-customization.mdx
@@ -162,7 +162,7 @@ The progress bars that display in both the top and bottom toolbars become visibl
   data={data}
   columns={columns}
   mantineProgressProps={({ isTopToolbar }) => ({
-    color: 'secondary',
+    color: 'orange',
     sx: { display: isTopToolbar ? 'block' : 'none' }, //only show top toolbar progress bar
     value: fetchProgress, //show precise real progress value if you so desire
     variant: 'determinate',
