--- a/apps/mantine-react-table-docs/pages/docs/guides/row-actions.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-actions.mdx
@@ -42,7 +42,7 @@ If you want to embed all of your row actions into a single menu, then you can us
 ```jsx
 <MantineReactTable
   enableRowActions
-  renderRowActionMenuItems={(row, index) => [
+  renderRowActionMenuItems={({row}) => [
       <MenuItem onClick={() => console.info('Edit')}>Edit</MenuItem>,
       <MenuItem onClick={() => console.info('Delete')}>Delete</MenuItem>
     ]
