--- a/apps/mantine-react-table-docs/pages/docs/guides/row-actions.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-actions.mdx
@@ -57,7 +57,7 @@ If you want to add row action buttons, then you can use the `renderRowActions` p
 ```jsx
 <MantineReactTable
   enableRowActions
-  renderRowActions={(row, index) => (
+  renderRowActions={({ row }) => (
     <Box>
       <IconButton onClick={() => console.info('Edit')}>
         <IconEdit />
