react virtual upgrade and other upgrades

--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -15,7 +15,10 @@ import Head from 'next/head';
 ### Pre 1.0 Breaking changes
 
 - Moved from @tabler/icons v1 to @table-icons/react v2
+- Switched to named exports only
 
 ## Roadmap
 
-TBD
+Mantine React Table v1 is slated to release a stable v1.0 based on Mantine v5.7+ by the end of February 2023. (Pretty soon!)
+
+Shortly after that (March 2023), Mantine React Table v2 will be released based on Mantine v6. This will be a major release with breaking changes, though most of those breaking changes will be related to the Mantine v6 release itself.
