--- a/apps/mantine-react-table-docs/pages/docs/api/index.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/api/index.mdx
@@ -1,5 +1,5 @@
 import Head from 'next/head';
-import TableOfContentsList from '../../../components/navigation/TableOfContentsList';
+import {TableOfContentsList} from '../../../components/navigation/TableOfContentsList';
 import { routes } from '../../../components/navigation/routes';
 
 <Head>
