copy some mrt 1.8 feature work

--- a/apps/mantine-react-table-docs/pages/about.mdx
+++ b/apps/mantine-react-table-docs/pages/about.mdx
@@ -7,7 +7,7 @@ import { FAQs } from '../components/mdx/FAQs';
   <title>About - Mantine React Table</title>
   <meta
     name="description"
-    content="About Mantine React Table. A fully-featured table component library for React based on TanStack Table V8 and Mantine UI, forked from Material React Table."
+    content="About Mantine React Table. A fully-featured table component library for React based on TanStack Table V8 and Mantine, forked from Material React Table."
   />
 </Head>
 
@@ -17,7 +17,7 @@ Mantine React Table is a fully featured Mantine implementation of TanStack React
 
 ### What is Mantine React Table?
 
-Mantine React Table (MRT) is a fully-feature data grid/table component library for React built on [TanStack Table V8's](https://react-table.tanstack.com/) powerful API. MRT is meant to work best in projects already using [Mantine UI](https://mantine.dev/) components, but it is not necessarily required. However, be aware that [Mantine UI](https://mantine.dev/) and [Emotion](https://emotion.sh/) are required as peer dependencies for MRT to work.
+Mantine React Table (MRT) is a fully-featured data grid/table component library for React built on [TanStack Table V8's](https://react-table.tanstack.com/) powerful API. MRT is meant to work best in projects already using [Mantine](https://mantine.dev/) components, but it is not necessarily required. However, be aware that [Mantine](https://mantine.dev/) and [Emotion](https://emotion.sh/) are required as peer dependencies for MRT to work.
 
 MRT is built from the ground up in TypeScript, and is designed to have a great type-safe dev experience with generics that react to the data structures you pass in. TypeScript is not at all required to use MRT, but it is recommended for the best and fasted developer experience, especially when defining columns.
 
@@ -153,7 +153,7 @@ If you see any inaccuracies in the documentation, there is a `"Suggest an Edit F
         name: 'Is Mantine React Table the same as Material React Table?',
         acceptedAnswer: {
           '@type': 'Answer',
-          text: 'Kind of. Mantine React Table is a fork of Material React Table. About 80% of their code is the same, since both are built on TanStack Table. But Mantine React Table uses Mantine UI for the front-end instead of Material UI. Both libraries pretty much offer the same features.',
+          text: 'Kind of. Mantine React Table is a fork of Material React Table. About 80% of their code is the same, since both are built on TanStack Table. But Mantine React Table uses Mantine for the front-end instead of Material UI. Both libraries pretty much offer the same features.',
         },
       },
       {
