--- a/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
@@ -101,7 +101,7 @@ Then try upgrading either `webpack` or `react-scripts` to the latest versions.
         name: 'What is the difference between Mantine React Table and Material React Table?',
         acceptedAnswer: {
           '@type': 'Answer',
-          text: 'Mantine React Table and Material React Table are sister libraries. Mantine React Table was forked from Material React Table after its initial success. Mantine React Table uses Mantine UI instead of Material UI.',
+          text: 'Mantine React Table and Material React Table are sister libraries. Mantine React Table was forked from Material React Table after its initial success. Mantine React Table uses Mantine instead of Material UI.',
         },
       },
       {
