--- a/apps/mantine-react-table-docs/pages/docs/getting-started/usage.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/getting-started/usage.mdx
@@ -15,11 +15,11 @@ Here is a brief overview of how to use Mantine React Table. This is a very simpl
 
 ### Setup
 
-To start using MantineReactTable, you first need to [install](/docs/getting-started/install) `mantine-react-table` and the necessary Mantine UI dependencies.
+To start using MantineReactTable, you first need to [install](/docs/getting-started/install) `mantine-react-table` and the necessary Mantine dependencies.
 
 There are additional steps and customizations you can do with your Mantine Theme, if you have not set it up in your application already. Check out the [Mantine docs](https://mantine.dev/theming/theme-object/) for more information.
 
-If you need to change the colors of the table components, advanced [Mantine UI Theming](https://mantine.dev/theming/mantine-provider/#nested-mantineproviders) is covered in the [Customize Components](/docs/guides/customize-components) guide.
+If you need to change the colors of the table components, advanced [Mantine Theming](https://mantine.dev/theming/mantine-provider/#nested-mantineproviders) is covered in the [Customize Components](/docs/guides/customize-components) guide.
 
 ### Import MantineReactTable
 
