--- a/apps/mantine-react-table-docs/pages/about.mdx
+++ b/apps/mantine-react-table-docs/pages/about.mdx
@@ -95,35 +95,11 @@ Mantine React Table is licensed under the [MIT License](https://github.com/Kevin
 
 ✅ Virtualization (react-virtual)
 
-### Join the Development Discussion
+### Contribute
 
-Want to join the development discussion? Join the [Discord server](https://discord.gg/5wqyRx6fnm) to ask questions, or talk about the general direction of the project.
+If you would like to contribute code to the project, please read the [Contributing Guide](https://github.com/kevinvandy/mantine-react-table/blob/main/CONTRIBUTING.md) to learn how to get started.
 
-### Contributors
-
-<Contributors />
-
-<div style={{ textAlign: 'center' }}>
-  <a
-    href="https://github.com/kevinvandy/mantine-react-table/graphs/contributors"
-    target="_blank"
-    rel="noopener"
-  >
-    <img src="https://contrib.rocks/image?repo=kevinvandy/mantine-react-table" />
-  </a>
-</div>
-
-<LinkCards />
-
-### OSS that Makes Mantine React Table Possible
-
-- [Mantine](https://mantine.dev) - The components
-- [TanStack](https://tanstack.com/) - React Table and React Virtual are key underlying technologies of MRT.
-- [Vercel](https://vercel.com/) - Next.js and Hosting
-- [Plausible Analytics](https://plausible.io/) - Anonymous and privacy-friendly analytics (no cookies!)
-- [Docsearch](https://docsearch.algolia.com/) - High quality search - free for open source projects
-
-### Support the Project
+#### Support the Project
 
 If you enjoy this library, please consider supporting the project by leaving a ⭐️ on the [GitHub repository](https://github.com/kevinvandy/mantine-react-table).
 
@@ -131,7 +107,24 @@ Also consider [sponsoring me on GitHub](https://github.com/sponsors/KevinVandy) 
 
 Nothing financial is required at all to support this library. The greatest help of all, actually, is to get involved in the project and community. Submitting [issues](https://github.com/kevinvandy/mantine-react-table/issues), [pull requests](https://github.com/kevinvandy/mantine-react-table/pulls), and helping others in the [Discord Server](https://discord.gg/5wqyRx6fnm) are all great ways to help out.
 
-If you see any inaccuracies in the documentation, there is a `"Suggest an Edit For This Page on GitHub"` button at the bottom of every page that will take you directly to the page's markdown file on GitHub. You can then edit the file and submit a pull request to fix the issue.
+If you see any inaccuracies in the documentation, there is a `"Suggest an Edit For This Page on GitHub"` button at the bottom of every page that will take you directly to the page's markdown file on GitHub. You can then edit the file and submit a pull request to fix any issues.
+
+#### Join the Development Discussion
+
+Want to join the development discussion? Join the [Discord server](https://discord.gg/5wqyRx6fnm) to ask questions or talk about the general direction of the project(s).
+
+#### Contributors
+
+<Contributors />
+
+### OSS that Makes Mantine React Table Possible
+
+- [Mantine](https://mantine.dev/) - Components!
+- [TanStack](https://tanstack.com/) - React Table and React Virtual are key underlying technologies of MRT.
+- [Vercel](https://vercel.com/) - Next.js, Domains, and Hosting
+- [Docsearch](https://docsearch.algolia.com/) - High quality search for static websites, free for open source projects
+- [Plausible Analytics](https://plausible.io/) - Anonymous and privacy-friendly analytics (no tracking or cookies!). View the [MRT Plausible Analytics Dashboard](https://plausible.io/mantine-react-table.com) yourself.
+- [EthicalAds](https://ethicalads.io/) - Ethical ads for open source projects (no tracking or cookies!)
 
 ### FAQs
 
