--- a/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
@@ -8,7 +8,17 @@ import { FAQs } from '../../../components/mdx/FAQs';
 
 ## Installation
 
-> `mantine-react-table` V1 requires **Mantine V5.7+** packages as dependencies in your project.
+If you are using **Mantine V5.7+**, but not **v6** yet, you will want to install MRT `v0.9.5`.
+
+If you are using **Mantine V6**, you will want to install the MRT `v1.0.0` betas.
+
+### Install Beta for Mantine V6
+
+```bash
+npm install mantine-react-table@beta
+```
+
+> `mantine-react-table` V0 requires **Mantine V5.7+** packages as dependencies in your project.
 >
 > If you are already using Mantine, you probably already have most of these peer dependencies installed.
 >
