fix a bunch of mantine v6 bug stuff and publish new beta

--- a/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
@@ -8,25 +8,21 @@ import { FAQs } from '../../../components/mdx/FAQs';
 
 ## Installation
 
-If you are using **Mantine V5.7+**, but not **v6** yet, you will want to install MRT `v0.9.5`.
+If you are using **Mantine V5.7+**, but not **v6** yet, you will want to install mantine-react-table `v0.9.5`.
 
 If you are using **Mantine V6**, you will want to install the MRT `v1.0.0` betas.
 
-### Install Beta for Mantine V6
+> The last version of MRT that supports Mantine V5 is mantine-react-table `v0.9.5`.
 
-```bash
-npm install mantine-react-table@beta
-```
-
-> `mantine-react-table` V0 requires **Mantine V5.7+** packages as dependencies in your project.
+> `mantine-react-table` V1 requires **Mantine V6.0+** packages as dependencies in your project.
 >
 > If you are already using Mantine, you probably already have most of these peer dependencies installed.
 >
 > Just double-check that you have the following in your package.json, or use the [full install commands](<#install-with-required-peer-dependencies-(recommended)>) below.
 >
-> 1.  `@mantine/core` (v5.7+)
-> 2.  `@mantine/hooks` (v5.7+)
-> 3.  `@mantine/dates` (v5.7+)
+> 1.  `@mantine/core` (v6.0+)
+> 2.  `@mantine/hooks` (v6.0+)
+> 3.  `@mantine/dates` (v6.0+)
 > 4.  `@tabler/icons-react` (v2)
 > 5.  `@emotion/react` (v11)
 > 6.  `dayjs` (v1.11+)
@@ -37,19 +33,19 @@ npm install mantine-react-table@beta
 NPM
 
 ```bash
-npm install mantine-react-table
+npm install mantine-react-table@beta
 ```
 
 PNPM
 
 ```bash
-pnpm add mantine-react-table
+pnpm add mantine-react-table@beta
 ```
 
 Yarn
 
 ```bash
-yarn add mantine-react-table
+yarn add mantine-react-table@beta
 ```
 
 ### Install With Required Peer Dependencies (Recommended)
@@ -57,19 +53,19 @@ yarn add mantine-react-table
 NPM
 
 ```bash
-npm install mantine-react-table @mantine/core @mantine/hooks @mantine/dates @emotion/react @tabler/icons-react dayjs
+npm install mantine-react-table@beta @mantine/core @mantine/hooks @mantine/dates @emotion/react @tabler/icons-react dayjs
 ```
 
 PNPM
 
 ```bash
-pnpm add mantine-react-table @mantine/core @mantine/hooks @mantine/dates @emotion/react @tabler/icons-react dayjs
+pnpm add mantine-react-table@beta @mantine/core @mantine/hooks @mantine/dates @emotion/react @tabler/icons-react dayjs
 ```
 
 Yarn
 
 ```bash
-yarn add mantine-react-table @mantine/core @mantine/hooks @mantine/dates @emotion/react @tabler/icons-react dayjs
+yarn add mantine-react-table@beta @mantine/core @mantine/hooks @mantine/dates @emotion/react @tabler/icons-react dayjs
 ```
 
 > You do NOT need to install `@tanstack/react-table`, as it is already an internal dependency of `mantine-react-table`, and must use an exact version already specified internally.
