--- a/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/column-filtering.mdx
@@ -41,7 +41,7 @@ Filtering is one of the most powerful features of Mantine React Table and is ena
       'maxLeafRowFilterDepth',
       'onColumnFilterFnsChange',
       'onColumnFiltersChange',
-      'onShowFiltersChange',
+      'onShowColumnFiltersChange',
       'renderColumnFilterModeMenuItems',
     ])
   }
