--- a/apps/mantine-react-table-docs/pages/docs/guides/aggregation-and-grouping.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/aggregation-and-grouping.mdx
@@ -263,7 +263,7 @@ const columns = [
 
 ### Multiple Aggregations Per column
 
-You may want to calculate more than one aggregation per column. This is now easier if you are upgraded to at least v1.3.0. You can now specify an array of `aggregationFn`s, and then reference the aggregation results from an array in the `AggregatedCell` render option.
+You may want to calculate more than one aggregation per column. If so, you can specify an array of `aggregationFn`s, and then reference the aggregation results from an array in the `AggregatedCell` render option.
 
 ```jsx
 const columns = [
