--- a/apps/mantine-react-table-docs/pages/docs/guides/memoize-components.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/memoize-components.mdx
@@ -14,7 +14,7 @@ import {Box} from '@mantine/core';
 
 ## Memoize Components Guide
 
-As of version 1.1, Mantine React Table has introduced a new `memoMode` prop that will allow you to either memoize table cells, table rows, or the entire table body in order to improve render performance on large tables.
+The `memoMode` prop will allow you to either memoize table cells, table rows, or the entire table body in order to improve render performance on large tables.
 
 However, memoizing these components will **BREAK** some features!
 
