--- a/apps/mantine-react-table-docs/pages/docs/guides/row-selection.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/row-selection.mdx
@@ -54,7 +54,7 @@ Selection checkboxes can be enabled with the `enableRowSelection` prop.
 You can also enable row selection conditionally per row with the same `enableRowSelection` prop, but with a callback function instead of a boolean.
 
 ```jsx
-<MaterialReactTable
+<MantineReactTable
   columns={columns}
   data={data}
   enableRowSelection={(row) => row.original.age > 18} //disable row selection for rows with age <= 18
