--- a/apps/mantine-react-table-docs/pages/docs/guides/virtualization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/virtualization.mdx
@@ -13,8 +13,6 @@ import EnableColumnExample from '../../../examples/enable-column-virtualization'
 
 ## Virtualization Feature Guide
 
-> MRT v1.4 and v1.5 have major virtualization upgrades after switching to `@tanstack/react-virtual` v3.0!
-
 Virtualization is useful when you have a lot of data you want to display client-side all at once, without having to use pagination. Mantine React Table makes this as simple as possible, thanks to [`@tanstack/react-virtual`](https://tanstack.com/virtual/v3) with both [row virtualization](#enable-row-virtualization) and [column virtualization](#enable-column-virtualization) support.
 
 > NOTE: You should only enable row virtualization if you have a large number of rows. Depending on the size of the table, if you are rendering less than a couple dozen rows at a time, you will actually just be adding extra overhead to the table renders. Virtualization only becomes necessary when you have over 50 rows or so at the same time with no pagination.
@@ -85,9 +83,7 @@ When either Row or Column Virtualization is enabled, a few other props automatic
 
 #### `layoutMode` Prop
 
-In MRT Versions 1.3 and earlier, a CSS `table-layout: fixed` style was automatically added to the `<table>` element to prevent columns wiggling back and forth during scrolling due to body cells having variating widths.
-
-But now in MRT Versions 1.4 and later, the `layoutMode` prop is automatically set to the `'grid'` value when either row or column virtualization is enabled, which means that all of the table markup will use CSS Grid and Flexbox instead of the traditional semantic styles that usually come with table tags. This is necessary to make the virtualization work properly with decent performance.
+The `layoutMode` prop is automatically set to the `'grid'` value when either row or column virtualization is enabled, which means that all of the table markup will use CSS Grid and Flexbox instead of the traditional semantic styles that usually come with table tags. This is necessary to make the virtualization work properly with decent performance.
 
 #### `enableStickyHeader` Prop
 
@@ -116,8 +112,6 @@ You can adjust some of the virtualizer props that are used internally with the `
 ```
 
 See the official TanStack [Virtualizer Options API Docs](https://tanstack.com/virtual/v3/docs/api/virtualizer#optional-options) for more information.
-
-> MRT v1.4 upgraded from `react-virtual` v2 to `@tanstack/react-virtual` v3.0, which has some breaking changes and virtualizer option name changes. TypeScript hints should help you with any prop name changes, but you can also view the official [TanStack Virtual Docs](https://tanstack.com/virtual/v3/docs/api/virtualizer#optional-options) for guidance.
 
 ### Access Underlying Virtualizer Instances
 
