--- a/apps/mantine-react-table-docs/pages/docs/guides/expanding-sub-rows.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/expanding-sub-rows.mdx
@@ -4,6 +4,7 @@ import ColumnOptionsTable from '../../../components/prop-tables/ColumnOptionsTab
 import StateOptionsTable from '../../../components/prop-tables/StateOptionsTable';
 import EnableExample from '../../../examples/enable-expanding-tree';
 import ExpandedExample from '../../../examples/expanding-tree-expanded';
+import ExpandedRootExample from '../../../examples/expanding-tree-root-expanded';
 
 <Head>
   <title>
@@ -56,7 +57,7 @@ Mantine React Table has support for expanding sub-rows or tree data. This featur
 
 To enable expanding sub-rows, you must first set the `enableExpanding` prop to `true`.
 
-However, your data must also be formatted in a way to allow for expanding rows that are in some way related to each other. By default, Mantine React Table will look for a special `subRows` property on each row of your data, and treat any array of rows that it finds as the sub-rows for that row. You can customize and override this behavior by passing a custom `getSubRows` prop.
+However, your data must also be formatted in a way to allow for expanding rows that are in some way related to each other. By default, Mantine React Table will look for a special `subRows` property on each row of your data and treat any array of rows that it finds as the sub-rows for that row. You can customize or override this behavior by passing a custom `getSubRows` prop.
 
 ```jsx
 const data = [
@@ -112,7 +113,7 @@ By default, Mantine React Table will treat expanded sub-rows the same as any oth
 
 ### Expanded Leaf Row Filtering Behavior
 
-If you are using the [filtering features](/docs/guides/column-filtering) along-side sub-row features, then there are a few behaviors and customizations you should be aware of.
+If you are using the [filtering features](/docs/guides/column-filtering) alongside sub-row features, then there are a few behaviors and customizations you should be aware of.
 
 #### Filter From Leaf Rows
 
@@ -131,7 +132,7 @@ By default, filtering is done from parent rows down (so if a parent row is filte
 
 By default, filtering is done for all rows (max depth of 100), no matter if they are root level parent rows or the child leaf rows of a parent row. Setting the `maxLeafRowFilterDepth` prop to `0` will cause filtering to only be applied to the root level parent rows, with all sub-rows remaining unfiltered. Similarly, setting this option to 1 will cause filtering to only be applied to child leaf rows 1 level deep, and so on.
 
-This is useful for situations where you want a row's entire child hierarchy to be visible regardless of the applied filter.
+This is useful for situations where you want a row's entire child hierarchy to be visible, regardless of the applied filter.
 
 ```jsx
 <MantineReactTable
@@ -146,7 +147,7 @@ This is useful for situations where you want a row's entire child hierarchy to b
 
 You can manage the initial state of the expanded rows with the `expanded` state option in either the `initialState` or `state` props.
 
-For example, you may want all rows to be expanded by default. You can simply set the `expanded` state option to `true` to do this.
+For example, you may want all rows to be expanded by default. To do this, you can simply set the `expanded` state option to `true`.
 
 ```jsx
 <MantineReactTable
@@ -158,3 +159,9 @@ For example, you may want all rows to be expanded by default. You can simply set
 ```
 
 <ExpandedExample />
+
+### Expand Root Rows Only By Default
+
+Here is a slightly more complex initial expanded state example where all the root rows are expanded by default, but none of the sub rows themselves are expanded by default. We just need to find all of the root row ids and set their key in the `expanded` `initialState` option to `true`.
+
+<ExpandedRootExample />
