--- a/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/getting-started/install.mdx
@@ -10,7 +10,7 @@ import { FAQs } from '../../../components/mdx/FAQs';
 
 If you are using **Mantine V5.7+**, but not **v6** yet, you will want to install mantine-react-table `v0.9.5`.
 
-If you are using **Mantine V6**, you will want to install the MRT `v1.0.0` betas.
+If you are using **Mantine V6**, you will want to install the MRT `v1.0.0` betas. They install by default now.
 
 > The last version of MRT that supports Mantine V5 is mantine-react-table `v0.9.5`.
 
@@ -33,19 +33,19 @@ If you are using **Mantine V6**, you will want to install the MRT `v1.0.0` betas
 NPM
 
 ```bash
-npm install mantine-react-table@beta
+npm install mantine-react-table
 ```
 
 PNPM
 
 ```bash
-pnpm add mantine-react-table@beta
+pnpm add mantine-react-table
 ```
 
 Yarn
 
 ```bash
-yarn add mantine-react-table@beta
+yarn add mantine-react-table
 ```
 
 ### Install With Required Peer Dependencies (Recommended)
@@ -53,19 +53,19 @@ yarn add mantine-react-table@beta
 NPM
 
 ```bash
-npm install mantine-react-table@beta @mantine/core @mantine/hooks @mantine/dates @emotion/react @tabler/icons-react dayjs
+npm install mantine-react-table @mantine/core @mantine/hooks @mantine/dates @emotion/react @tabler/icons-react dayjs
 ```
 
 PNPM
 
 ```bash
-pnpm add mantine-react-table@beta @mantine/core @mantine/hooks @mantine/dates @emotion/react @tabler/icons-react dayjs
+pnpm add mantine-react-table @mantine/core @mantine/hooks @mantine/dates @emotion/react @tabler/icons-react dayjs
 ```
 
 Yarn
 
 ```bash
-yarn add mantine-react-table@beta @mantine/core @mantine/hooks @mantine/dates @emotion/react @tabler/icons-react dayjs
+yarn add mantine-react-table @mantine/core @mantine/hooks @mantine/dates @emotion/react @tabler/icons-react dayjs
 ```
 
 > You do NOT need to install `@tanstack/react-table`, as it is already an internal dependency of `mantine-react-table`, and must use an exact version already specified internally.
