allow edit text input onKeyDown to be overriden

--- a/apps/mantine-react-table-docs/pages/docs/guides/toolbar-customization.mdx
+++ b/apps/mantine-react-table-docs/pages/docs/guides/toolbar-customization.mdx
@@ -188,7 +188,7 @@ However, you can repurpose this alert banner to show your own custom messages to
   mantineToolbarAlertBannerProps={
     isError
       ? {
-          color: 'error',
+          color: 'red',
           children: 'Network Error. Could not fetch data.',
         }
       : undefined
