implemented date and date-range filters

--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -14,6 +14,7 @@ import Head from 'next/head';
 
 ### V1 Beta Breaking changes
 
+- `@mantine/dates` and `dayjs` are now required peer dependencies as they are used for date filters
 - Upgraded to Mantine v6
 
 ### V0 Breaking changes
@@ -23,4 +24,4 @@ import Head from 'next/head';
 
 ## Roadmap
 
-Mantine React Table v1 is slated to release a stable v1.0 based on Mantine v6.0+ by the end of April 2023. (Pretty soon!)
+Mantine React Table v1 is slated to release a stable v1.0 based on Mantine v6.0+ by the end of June 2023.
