simplify density feature, better font awesome example

--- a/apps/mantine-react-table-docs/pages/changelog.mdx
+++ b/apps/mantine-react-table-docs/pages/changelog.mdx
@@ -12,9 +12,18 @@ import Head from 'next/head';
 
 ### V1
 
-### V1 Beta Breaking changes
+#### V1.0.0-beta.10
+
+- Simplified Density Feature with just 3 modes
+- Swapped out Density Icons
+- Changed default opacity styles of header cell icons
+
+#### V1.0.0-beta.9
 
 - `@mantine/dates` and `dayjs` are now required peer dependencies as they are used for date filters
+
+#### V1.0.0-beta.0
+
 - Upgraded to Mantine v6
 
 ### V0 Breaking changes
